# ukcp18

./: README-template.md  README.md  collection.json  docker_env  environment.yml  pyproject.toml  requirements-dev.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: installation_and_basic_usage.ipynb
scripts/: fetch_test_data.py  lint  test  test_data.py
src/stactools/ukcp18/: __init__.py  commands.py  stac.py
tests/: test_stac.py
tests/data/: huss_rcp26_land-gcm_global_60km_01_day_18991201-19091130.nc  pr_rcp26_land-gcm_global_60km_01_day_18991201-19091130.nc  psl_rcp26_land-gcm_global_60km_01_day_18991201-19091130.nc  rls_rcp26_land-gcm_global_60km_01_day_18991201-19091130.nc  rss_rcp26_land-gcm_global_60km_01_day_18991201-19091130.nc  sfcWind_rcp26_land-gcm_global_60km_01_day_18991201-19091130.nc  tas_rcp26_land-gcm_global_60km_01_day_18991201-19091130.nc  tasmax_rcp26_land-gcm_global_60km_01_day_18991201-19091130.nc  tasmin_rcp26_land-gcm_global_60km_01_day_18991201-19091130.nc  uas_rcp26_land-gcm_global_60km_01_day_18991201-19091130.nc  vas_rcp26_land-gcm_global_60km_01_day_18991201-19091130.nc
