[metadata]
name = stactools-ukcp18
version = attr: stactools.ukcp18.__version__
description = stactools package for UKCP18
long_description = file: README.md
long_description_content_type = text/markdown
author = stac-utils
author_email = stac@radiant.earth
url = https://github.com/stactools-packages/ukcp18
project_urls =
    Documentation = https://stactools-ukcp18.readthedocs.io/en/latest/
    Issues = https://github.com/stactools-packages/ukcp18/issues
keywords =
    stactools
    pystac
    catalog
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools == 0.2.1
    xstac
    xarray
    fsspec
    h5netcdf
    cftime
    # TODO: test optional
    adlfs
    pytest
    planetary-computer
    scipy

[options.packages.find]
where = src
